# Warehouse_Automation

./: .env.example  .env.production  .env.template  .env.test  .gitignore  CLAUDE.md  CURRENT_STOCK_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_STATUS.md  Dockerfile  QUICK_DEPLOY_GUIDE.md  README.md  README_MONITORING.md  TESTING_INSTRUCTIONS.md  add_missing_mappings.py  add_test_outbound_data.py  check_mappings_tool.py  clear_movements.py  debug_keycrm_api.py  debug_keycrm_api2.py  debug_order_4509.py  deploy.sh  docker-compose.dev.yml  docker-compose.yml  init_current_stock.py  main_with_scheduler.py  pyproject.toml  requirements.txt  run_bot.py  test_keycrm_openapi.py  test_keycrm_with_params.py  test_webhook_filtering.py
.claude/: .mcp.json  settings.json
dev_tools/: Makefile  README.md  analyze_mapping_gaps.py  check_mappings.py  diagnose_api_token.py  import_keycrm_orders.py  init_current_stock.py  monitor_webhooks.py  requirements-dev.txt  reset_stock_to_default.py  system_status_test.py  test_address_tag_filtering.py  test_figure_mapping.py  test_fixed_keycrm.py  test_full_integration.py  test_keycrm_webhook_format.py  test_webhook_manual.py
docs/: ADDRESS_TAG_FILTERING.md  GITHUB_ACTIONS_SETUP.md  PRODUCTION_CHECKLIST.md  README.md  TZ.md  products-2025-08-25-11-23-31__4fd.xlsx
scripts/: clear_sheets_before_deploy.py  final_system_test.py  init_sheets.py  show_current_stock_data.py  test_local_imports.py  test_ports_config.py  test_scheduler_config.py  test_system.py
src/: config.py
src/bot/: __init__.py  handlers.py  keyboards.py  middleware.py  states.py
src/bot/handlers/: __init__.py  monitoring.py
src/core/: calculations.py  exceptions.py  models.py  validators.py
src/integrations/: keycrm.py  sheets.py
src/scheduler/: __init__.py  jobs.py  runner.py
src/services/: monitoring_service.py  notification_service.py  report_service.py  scheduler_service.py  stock_service.py
src/utils/: auth.py  logger.py  retry.py
src/webhook/: __init__.py  app.py  auth.py  handlers.py
tests/: test_basic.py  test_calculations.py  test_integration.py  test_keycrm_integration.py  test_models.py  test_monitoring_service.py  test_notification_service.py  test_scheduler_service.py  test_sheets.py  test_stock_service.py
